--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ monitor_speed = 115200
 
 build_flags =
     -D ARDUINO_B_G431B_ESC1
-    -D HAL_ADC_MODULE_ONLY -D HAL_OPAMP_MODULE_ENABLED
+    -D HAL_OPAMP_MODULE_ENABLED
 
 lib_deps=
     askuric/Simple FOC @ ^2.3.2
